# fast2s

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  crates.js  deny.toml  search-index.js  settings.html  source-files.js
.github/workflows/: build.yml
benches/: README.md  math_zht.txt
benches/simple/: Cargo.toml
benches/simple/benches/: math_en.txt  math_zhc.txt  simple.rs
fast2s/: all.html  fn.convert.html  fn.replace.html  index.html  macro.hashmap.html  macro.hashset.html  sidebar-items.js
src/: lib.rs  macros.rs  special.rs  t2s.txt
src/fast2s/: lib.rs.html  macros.rs.html  special.rs.html
