[package]
name = "fast2s"
version = "0.1.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/fast2s"
repository = "https://github.com/tyrchen/fast2s"
homepage = "https://github.com/tyrchen/fast2s"
description = """
A fast Traditional Chinese to Simplified Chinese conversion library. Built with FST, faster than most of other libraries.
"""
readme = "README.md"
keywords = ["chinese", "simplified", "traditional", "convert", "hanzi"]
categories = ["text-processing", "localization", "internationalization", "value-formatting"]

[dependencies]
lazy_static = "1"
fst = "0.4"

[dev-dependencies]
criterion = "0.3"
opencc-rust = "1"
simplet2s = "0.2"
character_converter = "1"


[build-dependencies]
fst = "0.4"

[[bench]]
name = "simple"
harness = false
