[package]
name = "fast2s"
version = "0.3.1"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/fast2s"
repository = "https://github.com/tyrchen/fast2s"
homepage = "https://github.com/tyrchen/fast2s"
description = """
A fast Traditional Chinese to Simplified Chinese conversion library. Built with FST, faster than most of other libraries.
"""
readme = "README.md"
keywords = ["chinese", "simplified", "traditional", "convert", "hanzi"]
categories = ["text-processing", "localization", "internationalization", "value-formatting"]

[dependencies]
bincode = "1.3.3"
hashbrown = "0.12.1"
lazy_static = "1.4.0"

[build-dependencies]
bincode = "1.3.3"

#[profile.release]
#lto = true
#codegen-units = 1
